...
            android:id="@+id/search_top_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/darkbg1">

            <EditText
                android:id="@+id/searchTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:inputType="textNoSuggestions"
...
